Hide video initiation icon from the chat view by default
If the app wants to support user-initiated video calls, the application should
override boolean configuration variable ninchat_allow_user_initiated_video_calls
to true.

--- a/ninchatsdk/src/main/res/values/config.xml
+++ b/ninchatsdk/src/main/res/values/config.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="ninchat_queue_activity_progress_duration">3</integer>
+    <bool name="ninchat_allow_user_initiated_video_calls">false</bool>
 </resources>
