Show an error message instead hiding buttons when the user has not granted permission to do things

--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="ninchat_color_background_bottom">@color/ninchat_activity_bottom_matter_background</color>
     <color name="ninchat_color_text_bottom">@color/ninchat_colorPrimary</color>
 
+    <color name="ninchat_color_error_background">#983637</color>
+
     <color name="ninchat_color_info_text">@color/ninchat_colorPrimary</color>
     <color name="ninchat_color_link">@color/ninchat_colorAccent</color>
 
