Show avatar images as circle images instead of square ones

--- a/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/ninchat_colorPrimaryAlpha">
 
     <LinearLayout
@@ -32,15 +32,15 @@
             android:layout_height="1dp"
             android:foreground="@color/ninchat_activity_bottom_matter_background" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ninchat_video_call_consent_dialog_user_avatar"
             android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_image_size"
             android:layout_height="@dimen/ninchat_chat_activity_video_call_consent_image_size"
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/ninchat_chat_activity_video_call_consent_image_margin"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ninchat_chat_avatar_left" />
+            android:src="@drawable/ninchat_chat_avatar_left"
+            app:civ_border_width="0dp"
+            app:civ_border_color="#fff"/>
 
         <TextView
             android:id="@+id/ninchat_video_call_consent_dialog_user_name"
