--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,16 +29,16 @@
         android:visibility="gone"
         tools:visibility="visible">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ninchat_chat_message_agent_avatar"
             android:layout_width="@dimen/ninchat_chat_activity_avatar_size"
             android:layout_height="@dimen/ninchat_chat_activity_avatar_size"
             android:layout_marginEnd="@dimen/ninchat_chat_activity_avatar_margin"
             android:src="@drawable/ninchat_chat_avatar_left"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"/>
+            android:layout_alignParentTop="true"
+            app:civ_border_width="0dp"
+            app:civ_border_color="#fff"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -135,7 +136,7 @@
         android:visibility="gone"
         tools:visibility="visible">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ninchat_chat_message_user_avatar"
             android:layout_width="@dimen/ninchat_chat_activity_avatar_size"
             android:layout_height="@dimen/ninchat_chat_activity_avatar_size"
@@ -144,8 +145,8 @@
             android:layout_marginTop="@dimen/ninchat_chat_activity_message_title_top_margin"
             android:layout_marginStart="@dimen/ninchat_chat_activity_avatar_margin"
             android:src="@drawable/ninchat_chat_avatar_right"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            app:civ_border_width="0dp"
+            app:civ_border_color="#fff" />
 
         <LinearLayout
             android:orientation="vertical"
