--- a/ninchatsdk/src/main/res/values/config.xml
+++ b/ninchatsdk/src/main/res/values/config.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="ninchat_queue_activity_progress_duration">3</integer>
     <bool name="ninchat_allow_user_initiated_video_calls">false</bool>
+    <bool name="ninchat_chat_background_not_tiled">false</bool>
 </resources>
