Use config translations for the chat close dialog

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_queue.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_queue.xml
@@ -62,7 +62,7 @@
                 android:layout_marginTop="@dimen/ninchat_queue_activity_bottom_matter_button_margin"
                 android:layout_below="@id/ninchat_queue_activity_queue_message"
                 android:layout_centerHorizontal="true"
-                android:text="@string/ninchat_chat_close_chat_dialog_title"
+                tools:text="Close chat"
                 android:onClick="onClose"/>
 
         </RelativeLayout>
