--- a/ninchatsdk/src/main/res/layout/activity_ninchat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat.xml
@@ -23,25 +23,25 @@
 
             <TextView
                 android:id="@+id/ninchat_activity_header"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="@dimen/ninchat_activity_top_matter_buttons_top_margin"
-                android:paddingStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
-                android:paddingEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
+                android:layout_marginStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
+                android:layout_marginEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
+                android:gravity="center_horizontal"
                 android:textStyle="bold"
                 android:textColor="@color/ninchat_color_text_top"
                 tools:text="Welcome" />
 
             <TextView
                 android:id="@+id/ninchat_activity_no_queues"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/ninchat_button_vertical_margin"
                 android:layout_marginBottom="@dimen/ninchat_button_vertical_margin"
-                android:paddingStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
-                android:paddingEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
+                android:gravity="center_horizontal"
+                android:layout_marginStart="@dimen/ninchat_activity_top_matter_horizontal_margin"
+                android:layout_marginEnd="@dimen/ninchat_activity_top_matter_horizontal_margin"
                 android:visibility="gone"
                 tools:text="No queues"
                 android:textColor="@color/ninchat_color_text_top"
@@ -82,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:textAlignment="center"
+                android:gravity="center_horizontal"
                 android:textColor="@color/ninchat_color_text_bottom"
                 tools:text="Message of the day" />
 
