--- a/ninchatsdk/src/main/res/layout/activity_ninchat_queue.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_queue.xml
@@ -30,10 +30,12 @@
 
             <TextView
                 android:id="@+id/ninchat_queue_activity_queue_status"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/ninchat_queue_activity_queue_status_top_margin"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="@dimen/ninchat_queue_activity_queue_status_margin"
+                android:layout_marginStart="@dimen/ninchat_queue_activity_queue_status_margin"
+                android:layout_marginEnd="@dimen/ninchat_queue_activity_queue_status_margin"
                 tools:text="Queue status"
                 android:textColor="@color/ninchat_color_text_top" />
 
@@ -46,11 +48,11 @@
 
             <TextView
                 android:id="@+id/ninchat_queue_activity_queue_message"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentTop="true"
-                android:textAlignment="center"
+                android:gravity="center_horizontal"
                 android:textColor="@color/ninchat_color_text_bottom"
                 tools:text="In queue message" />
 
