--- a/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
@@ -12,19 +12,16 @@
         android:elevation="4dp"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/ninchat_close_chat_dialog_title"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/ninchat_chat_activity_close_chat_dialog_title_height">
+            android:layout_height="@dimen/ninchat_chat_activity_close_chat_dialog_title_height"
+            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:gravity="center"
+            tools:text="Close chat"
+            android:textColor="@color/ninchat_color_modal_title_text"/>
 
-            <TextView
-                android:id="@+id/ninchat_close_chat_dialog_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                tools:text="Close chat"
-                android:textColor="@color/ninchat_color_modal_title_text"/>
-
-        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -33,9 +30,11 @@
 
         <TextView
             android:id="@+id/ninchat_close_chat_dialog_description"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:gravity="center"
             android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_description_margin_top"
             tools:text="Are you sure you want to close the chat?"
             android:textColor="@color/ninchat_color_modal_title_text" />
