--- a/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
@@ -13,19 +13,15 @@
         android:elevation="4dp"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/ninchat_video_call_consent_dialog_title"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/ninchat_chat_activity_video_call_consent_title_height">
-
-            <TextView
-                android:id="@+id/ninchat_video_call_consent_dialog_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/ninchat_chat_video_call_consent_title"
-                android:textColor="@color/ninchat_color_modal_title_text"/>
-
-        </RelativeLayout>
+            android:layout_height="@dimen/ninchat_chat_activity_video_call_consent_title_height"
+            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:gravity="center"
+            android:text="@string/ninchat_chat_video_call_consent_title"
+            android:textColor="@color/ninchat_color_modal_title_text"/>
 
         <View
             android:layout_width="match_parent"
@@ -44,17 +40,23 @@
 
         <TextView
             android:id="@+id/ninchat_video_call_consent_dialog_user_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
             android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
             tools:text="User name"
             android:textColor="@color/ninchat_color_modal_title_text"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_description_margin_top"
+            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+            android:gravity="center_horizontal"
             android:text="@string/ninchat_chat_video_call_consent_description"
             android:textColor="@color/ninchat_color_modal_title_text"/>
 
