--- a/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/ninchat_colorPrimaryAlpha">
 
     <LinearLayout
@@ -20,7 +19,7 @@
             android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
             android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
             android:gravity="center"
-            android:text="@string/ninchat_chat_video_call_consent_title"
+            tools:text="Video call request"
             android:textColor="@color/ninchat_color_modal_title_text"/>
 
         <View
@@ -50,6 +49,7 @@
             android:textColor="@color/ninchat_color_modal_title_text"/>
 
         <TextView
+            android:id="@+id/ninchat_video_call_consent_dialog_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -57,19 +57,21 @@
             android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
             android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
             android:gravity="center_horizontal"
-            android:text="@string/ninchat_chat_video_call_consent_description"
+            tools:text="wants to video chat with you"
             android:textColor="@color/ninchat_color_modal_title_text"/>
 
         <Button
+            android:id="@+id/ninchat_video_call_consent_dialog_accept"
             android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_button_width"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             style="@style/NinchatTheme.Button.Dialog"
             android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_button_outer_margin"
             android:onClick="onAcceptVideoCall"
-            android:text="@string/ninchat_chat_video_call_consent_accept" />
+            android:text="Accept" />
 
         <Button
+            android:id="@+id/ninchat_video_call_consent_dialog_decline"
             style="@style/NinchatTheme.Button.Dialog.Close"
             android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_button_width"
             android:layout_height="wrap_content"
@@ -77,7 +79,7 @@
             android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_button_inner_margin"
             android:layout_marginBottom="@dimen/ninchat_chat_activity_video_call_consent_button_outer_margin"
             android:onClick="onRejectVideoCall"
-            android:text="@string/ninchat_chat_video_call_consent_reject" />
+            android:text="Reject" />
 
     </LinearLayout>
 
