--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -90,7 +90,9 @@
                     tools:text="Message from agent"
                     android:autoLink="none"
                     android:textColorLink="@color/ninchat_color_chat_bubble_left_link"
-                    android:textColor="@color/ninchat_color_chat_bubble_left_text"/>
+                    android:textColor="@color/ninchat_color_chat_bubble_left_text"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -104,7 +106,9 @@
                         tools:layout_height="150dp"
                         tools:src="@drawable/ninchat_logo"
                         android:background="@color/ninchat_colorPrimaryDark"
-                        android:adjustViewBounds="true" />
+                        android:adjustViewBounds="true"
+                        android:visibility="gone"
+                        tools:visibility="visible"/>
 
                     <RelativeLayout
                         android:id="@+id/ninchat_chat_message_agent_video_play_image"
