--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -36,6 +36,8 @@
     <dimen name="ninchat_chat_activity_message_bubble_padding_horizontal">16dp</dimen>
     <dimen name="ninchat_chat_activity_message_video_play_icon_background_size">35dp</dimen>
     <dimen name="ninchat_chat_activity_message_video_play_icon_size">17dp</dimen>
+    <dimen name="ninchat_chat_activity_message_writing_indicator_height">20dp</dimen>
+    <dimen name="ninchat_chat_activity_message_writing_indicator_width">40dp</dimen>
     <dimen name="ninchat_chat_activity_chat_ended_top_margin">26dp</dimen>
     <dimen name="ninchat_chat_activity_message_list_bottom_padding">10dp</dimen>
     <dimen name="ninchat_chat_activity_message_margin">5dp</dimen>
