--- a/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_close_chat.xml
@@ -1,65 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/ninchat_colorPrimaryAlpha">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/ninchat_color_modal_background"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/ninchat_close_chat_dialog_title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/ninchat_chat_activity_close_chat_dialog_title_height"
+        android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:gravity="center"
+        tools:text="Close chat"
+        android:textColor="@color/ninchat_color_modal_title_text"/>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:foreground="@color/ninchat_activity_bottom_matter_background" />
+
+    <TextView
+        android:id="@+id/ninchat_close_chat_dialog_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/ninchat_color_modal_background"
-        android:elevation="4dp"
-        android:orientation="vertical">
+        android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:gravity="center"
+        android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_description_margin_top"
+        tools:text="Are you sure you want to close the chat?"
+        android:textColor="@color/ninchat_color_modal_title_text" />
 
-        <TextView
-            android:id="@+id/ninchat_close_chat_dialog_title"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/ninchat_chat_activity_close_chat_dialog_title_height"
-            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:gravity="center"
-            tools:text="Close chat"
-            android:textColor="@color/ninchat_color_modal_title_text"/>
+    <Button
+        android:id="@+id/ninchat_close_chat_dialog_confirm"
+        android:layout_width="@dimen/ninchat_chat_activity_close_chat_dialog_button_width"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        style="@style/NinchatTheme.Button.Dialog"
+        android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_button_outer_margin"
+        tools:text="Close" />
 
+    <Button
+        android:id="@+id/ninchat_close_chat_dialog_decline"
+        style="@style/NinchatTheme.Button.Dialog.Close"
+        android:layout_width="@dimen/ninchat_chat_activity_close_chat_dialog_button_width"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_button_inner_margin"
+        android:layout_marginBottom="@dimen/ninchat_chat_activity_close_chat_dialog_button_outer_margin"
+        tools:text="Continue" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:foreground="@color/ninchat_activity_bottom_matter_background" />
-
-        <TextView
-            android:id="@+id/ninchat_close_chat_dialog_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:gravity="center"
-            android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_description_margin_top"
-            tools:text="Are you sure you want to close the chat?"
-            android:textColor="@color/ninchat_color_modal_title_text" />
-
-        <Button
-            android:id="@+id/ninchat_close_chat_dialog_confirm"
-            android:layout_width="@dimen/ninchat_chat_activity_close_chat_dialog_button_width"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            style="@style/NinchatTheme.Button.Dialog"
-            android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_button_outer_margin"
-            android:onClick="onCloseChatConfirm"
-            tools:text="Close" />
-
-        <Button
-            android:id="@+id/ninchat_close_chat_dialog_decline"
-            style="@style/NinchatTheme.Button.Dialog.Close"
-            android:layout_width="@dimen/ninchat_chat_activity_close_chat_dialog_button_width"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/ninchat_chat_activity_close_chat_dialog_button_inner_margin"
-            android:layout_marginBottom="@dimen/ninchat_chat_activity_close_chat_dialog_button_outer_margin"
-            android:onClick="onContinueChat"
-            tools:text="Continue" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
