--- a/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
+++ b/ninchatsdk/src/main/res/layout/dialog_video_call_consent.xml
@@ -1,86 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/ninchat_colorPrimaryAlpha">
+    android:layout_height="wrap_content"
+    android:background="@color/ninchat_color_modal_background"
+    android:elevation="4dp"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/ninchat_video_call_consent_dialog_title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/ninchat_chat_activity_video_call_consent_title_height"
+        android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:gravity="center"
+        tools:text="Video call request"
+        android:textColor="@color/ninchat_color_modal_title_text"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:foreground="@color/ninchat_activity_bottom_matter_background" />
+
+    <ImageView
+        android:id="@+id/ninchat_video_call_consent_dialog_user_avatar"
+        android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_image_size"
+        android:layout_height="@dimen/ninchat_chat_activity_video_call_consent_image_size"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="@dimen/ninchat_chat_activity_video_call_consent_image_margin"
+        android:src="@drawable/ninchat_chat_avatar_left"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"/>
+
+    <TextView
+        android:id="@+id/ninchat_video_call_consent_dialog_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/ninchat_color_modal_background"
-        android:elevation="4dp"
-        android:orientation="vertical">
+        android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        tools:text="User name"
+        android:textColor="@color/ninchat_color_modal_title_text"/>
 
-        <TextView
-            android:id="@+id/ninchat_video_call_consent_dialog_title"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/ninchat_chat_activity_video_call_consent_title_height"
-            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:gravity="center"
-            tools:text="Video call request"
-            android:textColor="@color/ninchat_color_modal_title_text"/>
+    <TextView
+        android:id="@+id/ninchat_video_call_consent_dialog_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_description_margin_top"
+        android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
+        android:gravity="center_horizontal"
+        tools:text="wants to video chat with you"
+        android:textColor="@color/ninchat_color_modal_title_text"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:foreground="@color/ninchat_activity_bottom_matter_background" />
+    <Button
+        android:id="@+id/ninchat_video_call_consent_dialog_accept"
+        android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_button_width"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        style="@style/NinchatTheme.Button.Dialog"
+        android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_button_outer_margin"
+        tools:text="Accept" />
 
-        <ImageView
-            android:id="@+id/ninchat_video_call_consent_dialog_user_avatar"
-            android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_image_size"
-            android:layout_height="@dimen/ninchat_chat_activity_video_call_consent_image_size"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="@dimen/ninchat_chat_activity_video_call_consent_image_margin"
-            android:src="@drawable/ninchat_chat_avatar_left"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+    <Button
+        android:id="@+id/ninchat_video_call_consent_dialog_decline"
+        style="@style/NinchatTheme.Button.Dialog.Close"
+        android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_button_width"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_button_inner_margin"
+        android:layout_marginBottom="@dimen/ninchat_chat_activity_video_call_consent_button_outer_margin"
+        tools:text="Decline" />
 
-        <TextView
-            android:id="@+id/ninchat_video_call_consent_dialog_user_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            tools:text="User name"
-            android:textColor="@color/ninchat_color_modal_title_text"/>
-
-        <TextView
-            android:id="@+id/ninchat_video_call_consent_dialog_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_description_margin_top"
-            android:layout_marginStart="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:layout_marginEnd="@dimen/ninchat_chat_activity_dialog_horizontal_padding"
-            android:gravity="center_horizontal"
-            tools:text="wants to video chat with you"
-            android:textColor="@color/ninchat_color_modal_title_text"/>
-
-        <Button
-            android:id="@+id/ninchat_video_call_consent_dialog_accept"
-            android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_button_width"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            style="@style/NinchatTheme.Button.Dialog"
-            android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_button_outer_margin"
-            android:onClick="onAcceptVideoCall"
-            tools:text="Accept" />
-
-        <Button
-            android:id="@+id/ninchat_video_call_consent_dialog_decline"
-            style="@style/NinchatTheme.Button.Dialog.Close"
-            android:layout_width="@dimen/ninchat_chat_activity_video_call_consent_button_width"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/ninchat_chat_activity_video_call_consent_button_inner_margin"
-            android:layout_marginBottom="@dimen/ninchat_chat_activity_video_call_consent_button_outer_margin"
-            android:onClick="onRejectVideoCall"
-            tools:text="Decline" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
