--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -53,4 +53,18 @@
         <item name="android:paddingEnd">@dimen/ninchat_chat_activity_send_text_padding</item>
     </style>
 
+    <style name="NinchatTheme.Dialog" parent="android:Theme.Material.Dialog.Alert">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentOverlay" >@null</item >
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowMinWidthMajor">100%</item>
+        <item name="android:windowMinWidthMinor">100%</item>
+        <!--<item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>-->
+        <!--<item name="android:windowNoTitle">true</item>-->
+    </style>
+
 </resources>
