Make the skip tap target larger in the review view

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_review.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_review.xml
@@ -131,7 +131,7 @@
         android:layout_height="wrap_content"
         tools:text="Skip"
         android:textColor="@color/ninchat_color_link"
-        android:layout_marginBottom="@dimen/ninchat_review_activity_skip_bottom_margin"
+        android:padding="@dimen/ninchat_review_activity_skip_bottom_margin"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:onClick="onSkipClick"/>
